--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
+    testOptions.unitTests.includeAndroidResources = true
     dataBinding {
         enabled = true
         enabledForTests = true
@@ -51,6 +52,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    testImplementation "androidx.test:core-ktx:1.2.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
     //Timber
     implementation "com.jakewharton.timber:timber:4.7.1"
 
@@ -73,4 +77,10 @@ dependencies {
     // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "androidx.test.ext:junit:1.1.1"
+
+    //Hamcrest
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+
+    //Coroutine test
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5"
 }
