--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // Dependencies for Android instrumented unit tests
+    androidTestImplementation "junit:junit:4.13"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5"
+    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+    implementation "androidx.test:core:1.2.0"
 
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
@@ -81,6 +86,5 @@ dependencies {
     //Hamcrest
     testImplementation "org.hamcrest:hamcrest-all:1.3"
 
-    //Coroutine test
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5"
+
 }
