--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,19 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     // Dependencies for Android instrumented unit tests
     androidTestImplementation "junit:junit:4.13"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5"
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
     debugImplementation "androidx.fragment:fragment-testing:1.2.5"
     implementation "androidx.test:core:1.2.0"
+    debugImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5"
+
+    androidTestImplementation "org.mockito:mockito-core:2.8.9"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.2.0-beta01"
+
 
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
